<resources>
    <string name="app_name">tipCalculator</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="bill_amount_label">Bill Amount:</string>
    <string name="percent_label">Percent</string>
    <string name="tip_label">Tip</string>
    <string name="total_label">Total</string>
    <string name="percent">15%</string>
    <string name="tip">0.00</string>
    <string name="total">0.00</string>
    <string name="percent_up">+</string>
    <string name="percent_down">-</string>
    <string name="reset">Reset</string>
    <string name="pony" />
</resources>
